src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A37.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A37 {
  interface A1;
  interface B1;
  association A1 -> (foo) B1 [1];

  class A2 implements A1;
  association / A2 -> (foo) B1 [0..1]; // not ok, the cardinality of the derived (inherited)
                                       // association does not fit
                                       // ( A1 -> B1 has 1; and A2 -> B1 has 0..1)
}
